--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,6 @@
     "name": "magenxcommerce/module-catalog-cms-graph-ql",
     "description": "N/A",
     "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
-    "version": "100.4.0",
     "require": {
         "php": "~7.3.0||~7.4.0",
         "magento/framework": "103.0.*",
@@ -18,6 +13,10 @@
         "magento/module-cms": "104.0.*",
         "magento/module-catalog-graph-ql": "100.4.*"
     },
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -25,5 +24,6 @@
         "psr-4": {
             "Magento\\CatalogCmsGraphQl\\": ""
         }
-    }
+    },
+    "version": "100.4.0"
 }
